--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "progress-web",
+  "name": "progress-website",
   "version": "1.0.0",
-  "description": "Progress Political Party Website",
-  "main": "index.js",
   "scripts": {
-    "build": "echo 'No build step needed'",
-    "start": "vercel dev"
+    "build": "echo 'Files already in dist/'",
+    "vercel-build": "echo 'No build step needed'"
   },
-  "keywords": [
-    "progress",
-    "political",
-    "website"
-  ],
-  "author": "Maxi Gorynski",
-  "license": "ISC",
   "dependencies": {
     "googleapis": "^105.0.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
