--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,20 @@
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/$1"
+    },
+    {
+      "source": "/images/(.*)",
+      "destination": "/public/images/$1"
     },
     {
       "source": "/(.*)",
